2014-08-14  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/device-manager.pl: bugfix

2014-08-04  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/device-help.pl:
	  Corrected the rfPIC12F509.. to rfPIC12C509 and
	  renamed the data sheet search buttons.

2014-08-03  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/device-help.pl:
	  Can to search the data sheet of the processors.

2014-08-03  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/device-help.pl:
	  Improved the recognition of the Common RAM.

2014-08-01  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/device-manager.pl:
	  Improved the recognition of the Common RAM.

2014-07-31  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/build-register-db.pl, tools/device-help.pl,
	  tools/device-manager.pl:
	  Adapted to the modified px structure.

2014-07-30  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/build-register-db.pl, tools/device-help.pl,
	  tools/device-manager.pl:
	  Adapted to the modified px structure.

2014-07-30  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/device-manager.pl:
	  The "flashdata" section equal with the "eedata" section.

2014-07-25  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/cfg-import.pl: New option: -l or --limit-defaults
	  Changed "PICRF..." to "RF...".

2014-07-24  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/device-manager.pl:
	  Adapted to the modified px structure.

2014-07-23  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/device-help.pl: Show the default value of the config bits.

2014-07-16  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/cfg-import.pl: Bugfix and update.

	* tools/device-help.pl: Show the default value of the config words.

2014-07-15  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
	* tools/device-help.pl: Complemented the shortages of the database.
